--- a/src/backend/services/order-api/src/main/resources/application.properties
+++ b/src/backend/services/order-api/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.swagger-ui.always-include=true
+quarkus.package.type=uber-jar
+quarkus.http.port=8090
 
 quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.max-size=13
 quarkus.datasource.username=username-default
 quarkus.datasource.jdbc.url=jdbc:h2:mem:default
-quarkus.datasource.jdbc.max-size=13
 
-quarkus.swagger-ui.always-include=true
+# dev 
+%dev.quarkus.datasource.db-kind=h2
+%dev.quarkus.datasource.jdbc.max-size=13
+%dev.quarkus.datasource.username=username-default
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 
-quarkus.native.additional-build-args=--trace-object-instantiation=java.util.Random
-quarkus.native.additional-build-args=--initialize-at-run-time=org.modelmapper.internal.ProxyFactory
+# prod
+%prod.quarkus.datasource.db-kind=postgresql
+%prod.quarkus.datasource.username=admin
+%prod.quarkus.datasource.password=Passw0rd!
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/orderdb
