--- a/src/backend/services/order-api/settings.gradle
+++ b/src/backend/services/order-api/settings.gradle
@@ -6,6 +6,7 @@ pluginManagement {
     }
     plugins {
         id "${quarkusPluginId}" version "${quarkusPluginVersion}"
+        id "io.freefair.lombok" version "6.5.0"
     }
 }
 rootProject.name='order-api'
