quarkus.http.root-path set

--- a/k8s-kustomize/infrastructure/crds/istio-operator/istio-operator-crds.yaml
+++ b/k8s-kustomize/infrastructure/crds/istio-operator/istio-operator-crds.yaml
@@ -137,6 +137,7 @@ metadata:
   name: istio-operator
 spec:
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       name: istio-operator
@@ -148,7 +149,7 @@ spec:
       serviceAccountName: istio-operator
       containers:
         - name: istio-operator
-          image: docker.io/istio/operator:1.12.2
+          image: docker.io/istio/operator:1.14.3
           command:
           - operator
           - server
@@ -256,3 +257,4 @@ spec:
     served: true
     storage: true
 ---
+
