--- a/src/backend/services/order-api/src/main/resources/application.properties
+++ b/src/backend/services/order-api/src/main/resources/application.properties
@@ -19,3 +19,4 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 %prod.quarkus.datasource.username=admin
 %prod.quarkus.datasource.password=Passw0rd!
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/orderdb
+%prod.quarkus.http.root-path=/order
