--- a/k8s-kustomize/services/order-api/base/order-pgsql.yaml
+++ b/k8s-kustomize/services/order-api/base/order-pgsql.yaml
@@ -53,7 +53,7 @@ spec:
             cpu: ".5"
           limits:
             memory: "1Gi"
-            cpu: 1
+            cpu: "1"
       restartPolicy: Always
       volumes:
       - name: order-database-data
