adding DB into Rust application

--- a/src/backend/services/catalog-api/Cargo.toml
+++ b/src/backend/services/catalog-api/Cargo.toml
@@ -9,3 +9,10 @@ rocket = {version = "0.5.0-rc.2", features = ["json"]}
 serde = {version = "1.0.137"}
 rand = {version = "0.8"}
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
+diesel = { version = "2.0.2", features = ["postgres", "numeric", "chrono"] }
+diesel_migrations = "2.0.0"
+bigdecimal = { version = "0.3.0", features = ["serde"] }
+dotenvy = "0.15"
+chrono = "0.4.22"
+rocket_sync_db_pools =  {version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
+rocket_okapi =  { version = "0.8.0-rc.2", features = ["swagger"]}
