--- a/src/backend/nginx/nginx.conf
+++ b/src/backend/nginx/nginx.conf
@@ -1,5 +1,5 @@
-upstream menu-api {
-  server menu-api:80;
+upstream catalog-api {
+  server catalog-api:8000;
 }
 
 upstream identity-api {
@@ -42,9 +42,9 @@ server {
   #   proxy_pass http://web-app;
   # }
 
-  location /menu {
-    rewrite ^/menu/(.*) /$1 break;
-    proxy_pass http://menu-api;
+  location /catalog {
+    rewrite ^/catalog/(.*) /$1 break;
+    proxy_pass http://catalog-api;
   }
 
   location /identity {
