--- a/src/backend/services/order-api/src/main/resources/application.properties
+++ b/src/backend/services/order-api/src/main/resources/application.properties
@@ -3,20 +3,17 @@ quarkus.swagger-ui.always-include=true
 quarkus.package.type=uber-jar
 quarkus.http.port=8090
 
-quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.max-size=13
-quarkus.datasource.username=username-default
-quarkus.datasource.jdbc.url=jdbc:h2:mem:default
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.max-size=13
+%test.quarkus.datasource.username=username-default
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 
-# dev 
-%dev.quarkus.datasource.db-kind=h2
-%dev.quarkus.datasource.jdbc.max-size=13
-%dev.quarkus.datasource.username=username-default
-%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:default
+# local docker 
+%local.quarkus.datasource.db-kind=postgresql
+%local.quarkus.datasource.jdbc.max-size=10
+%local.quarkus.http.root-path=/order
+
 
 # prod
 %prod.quarkus.datasource.db-kind=postgresql
-%prod.quarkus.datasource.username=admin
-%prod.quarkus.datasource.password=Passw0rd!
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/orderdb
 %prod.quarkus.http.root-path=/order
