order-api changing docker images into arm64

--- a/src/backend/services/order-api/src/main/resources/application.properties
+++ b/src/backend/services/order-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.swagger-ui.always-include=true
 quarkus.package.type=uber-jar
-quarkus.http.port=8090
+quarkus.http.port=8080
 
 %test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.jdbc.max-size=13
@@ -12,7 +12,7 @@ quarkus.http.port=8090
 %local.quarkus.datasource.db-kind=postgresql
 %local.quarkus.datasource.jdbc.max-size=10
 %local.quarkus.http.root-path=/order
-
+%local.quarkus.http.non-application-root-path=/order
 
 # prod
 %prod.quarkus.datasource.db-kind=postgresql
