.net core 3.1 changed into arm64 label

--- a/src/backend/nginx/nginx.conf
+++ b/src/backend/nginx/nginx.conf
@@ -14,9 +14,9 @@ upstream order-api {
   server order-api:8090;
 }
 
-upstream dashboard-app {
-  server dashboard-app:80;
-}
+# upstream dashboard-app {
+#   server dashboard-app:80;
+# }
 
 # upstream web-app {
 #   server web-app:80;
@@ -32,10 +32,10 @@ server {
   proxy_set_header    X-Real-Port $server_port;
   proxy_set_header    Host $host:8080;
 
-  location /dashboard {
-    rewrite ^/dashboard/(.*) /$1 break;
-    proxy_pass http://dashboard-app;
-  }
+  # location /dashboard {
+  #   rewrite ^/dashboard/(.*) /$1 break;
+  #   proxy_pass http://dashboard-app;
+  # }
 
   # location /web {
   #   rewrite ^/web/(.*) /$1 break;
@@ -43,7 +43,6 @@ server {
   # }
 
   location /catalog {
-    rewrite ^/catalog/(.*) /$1 break;
     proxy_pass http://catalog-api;
   }
 
@@ -51,8 +50,8 @@ server {
     proxy_pass          http://identity-api;
   }
 
-  location /basket {
-    proxy_pass http://basket-api;
+  location /basket/ {
+    proxy_pass http://basket-api/;
   }
 
   location /order {
