--- a/src/backend/services/identity.api/Dockerfile
+++ b/src/backend/services/identity.api/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
+FROM --platform=linux/arm64 mcr.microsoft.com/dotnet/core/sdk:3.1.426-buster-arm64v8 AS build
 WORKDIR /src
 COPY Identity.API/ ./api
 
@@ -13,7 +13,7 @@ RUN dotnet build api/Identity.API.csproj -c Release -o /app
 FROM build AS publish
 RUN dotnet publish api/Identity.API.csproj -c Release -o /app
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine AS final
+FROM --platform=linux/arm64 mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine-arm64v8 AS final
 WORKDIR /app
 
 COPY --from=publish /app .
