--- a/src/backend/services/order-api/src/main/resources/application.properties
+++ b/src/backend/services/order-api/src/main/resources/application.properties
@@ -3,10 +3,10 @@ quarkus.swagger-ui.always-include=true
 quarkus.package.type=uber-jar
 quarkus.http.port=8080
 
-%test.quarkus.datasource.db-kind=h2
-%test.quarkus.datasource.jdbc.max-size=13
-%test.quarkus.datasource.username=username-default
-%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:default
+quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.max-size=13
+quarkus.datasource.username=username-default
+quarkus.datasource.jdbc.url=jdbc:h2:mem:default
 
 # local docker 
 %local.quarkus.datasource.db-kind=postgresql
